cmake_minimum_required(VERSION 3.15)
project(bags)

set(CMAKE_CXX_STANDARD 14)

add_executable(bags bags.cpp)
#add_library(CPUTimer.h CursorList.cpp CursorList.h
 #       dsexceptions.h QueueAr.cpp QueueAr.h
 #       QueueLL.cpp QueueLL.h StackAr.cpp StackAr.h
 #       StackLi.cpp StackLi.h vector.cpp vector.h)